--- a/index.html
+++ b/index.html
@@ -47,6 +47,20 @@
         display: none;
     }
 
+    #unvalidatedred {
+        display: none;
+
+        border: solid 1px green; 
+        min-height: 280px;
+        text-align: center;
+        background: linear-gradient(rgb(157, 252, 172), rgb(79, 230, 99));
+        border-radius: 2px; 
+        font-size: 1.5em;
+        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+        line-height: 280px;
+        text-shadow: 1px 1px 2px black;
+    }
+
     #evalex > fieldset {
         height: 7em;
     }
@@ -150,6 +164,13 @@
             </div>
 
             <button id="evalcompute">Compute</button>
+        </section>
+
+        <section id="unvalidatedred">
+            
+            <div>Add # Link in fragment then hit set document location </div>
+            <button id="setloc">Set Document Location</button>
+            
         </section>
     </main>
 </body>
